--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "element-ui": "^2.15.3",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
