--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       MONGODB_NAME: blog-fastapi
       MONGODB_URI: mongodb://mongodbuser:mongodbpassword@mongodb:27017
     volumes:
-      - ./src/:/home/app/backend/src
-      - ./files/:/home/app/backend/files
+      - ./backend/:/home/app/backend
     env_file:
       - ./.env
     depends_on:
